<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.escoladeltreball.currencyconverter.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Convert" />

        <EditText
            android:id="@+id/etTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
